<resources>
    <string name="app_name">Pasoporti</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="telefono">Teléfono</string>
    <string name="ciudad">Ciudad</string>
    <string name="direcci_n">Dirección</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="tipo_de_documento">Tipo de Documento</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="terminos_y_condiciones"><u>Términos y Condiciones</u></string>
    <string name="pol_tica_de_manejo_de_datos"><u>Política de Manejo de Datos</u></string>
    <string name="auth_failed">Creación Fallida</string>
    <string name="cerrar_sesi_n"><u>Cerrar Sesión</u></string>
    <string name="title_activity_programar_servicio">ProgramarServicioActivity</string>
    <string name="time_picker_result_value">%1$s:%2$s</string>
    <string name="date_picker_result_value">%1$s/%2$s/%3$s</string>
    <string name="cambiar_contrase_a"><u>Cambiar Contraseña</u></string>
    <string name="title_activity_acompanados">AcompanadosActivity</string>
    <string name="observacionesservicio">Por último, indicanos información adicional que debamos saber sobre la persona que acompañaremos(edad,discapacidad o dificultad para moverse,medicamentos que toma o que deba tomar durante el servicio, información que se deba reportaren el lugar al que la llevaremos, etc)</string>
    <string name="title_activity_historial">HistorialActivity</string>
    <string name="idservicio" />
    <string name="id_servicio">Id Servicio</string>
    <string name="map_fragment">Map Fragment</string>

</resources>
