<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:background="@color/colorPrimary"
    tools:context="com.example.daniel.pasoporti.Registro.RegEmailFragment">

    <!-- TODO: Update blank fragment layout -->


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded"
                android:orientation="horizontal">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_hideUnderline="true" />

            </LinearLayout>

            <!--  Password Label -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded"
                android:orientation="horizontal">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_hideUnderline="true"
                    app:met_minCharacters="6" />

            </LinearLayout>

            <!--  Confirm Password Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded"
                android:orientation="horizontal">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repetir_contrase_a"
                    android:inputType="textPassword"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_hideUnderline="true"
                    app:met_minCharacters="6" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</FrameLayout>
