<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:background="@color/colorPrimary"
    tools:context="com.example.daniel.pasoporti.Registro.RegDatosFragment">

    <!-- TODO: Update blank fragment layout -->


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded"
                android:orientation="horizontal">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/register_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direcci_n"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_hideUnderline="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded"
                android:orientation="horizontal">

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinner_register_ciudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="Seleccione Ciudad"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_hideUnderline="true" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded"
                android:orientation="horizontal">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/register_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="number"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_hideUnderline="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTerminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/terminos_y_condiciones"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewManejoDatos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/pol_tica_de_manejo_de_datos"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/checkBoxAuth"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/white"
                    android:text="Acepto los Términos y Condiciones y la Política de Manejo de Datos"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/buttonGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:onClick="onClick_Guardar"
                    android:text="Crear"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
